Responsive mobile fixed

--- a/src/styles/Banner.scss
+++ b/src/styles/Banner.scss
@@ -45,7 +45,10 @@
       .description {
         width: 95%;
         h2 {
-          font-size: 40px;
+          font-size:25px;
+        }
+        h3, P {
+          font-size:20px;
         }
       }
     }
