--- a/src/styles/Skills.scss
+++ b/src/styles/Skills.scss
@@ -130,12 +130,23 @@
     }
 }
 
-@media screen and (max-width: 460px) {
+@media screen and (max-width: 440px) {
     .skills {
         ul {
             li {
-                width: 95%;
+                width: 85%;
             }
         }
+        h2, p{
+            font-size: 25px;
+        }
+        h3{
+            font-size: 20px;
+            font-weight: 550;
+        }
+        .hover-text{
+            font-weight: 250;
+        }
     }
+    
 }
