--- a/src/styles/Contact.scss
+++ b/src/styles/Contact.scss
@@ -6,6 +6,22 @@
         margin-top: 90px;
     }
 
+    h5{
+        font-size: 20px;
+        font-weight: normal;
+        color:  rgba(121, 156, 165);
+        border: 1px white solid;
+        border-radius: 25px;
+        padding: 20px;
+        font-style: italic;
+        margin: 0px;
+    }
+
+    h6{
+        color: white;
+        font-weight: 300;
+    }
+
     .contactDescription {
         width: 80%;
         margin: auto;
@@ -78,8 +94,10 @@
             font-size: 25px;
         }
 
-        p{
-            font-size: 16px;
+        h5, h6{
+            font-size: 20px;
+            width: 100%;
+            margin-left: -20px;
         }
 
         .contactEmail {
