--- a/src/styles/Skills.scss
+++ b/src/styles/Skills.scss
@@ -12,7 +12,7 @@
         list-style: none;
         display: flex;
         justify-content: space-around;
-        margin-top: 100px;
+        margin-top: 50px;
         padding-inline-start: 0;
         li {
             color: white;
@@ -29,7 +29,6 @@
             box-shadow: 15px 15px 15px rgb(121, 156, 165);
             border: black solid 1px;
             
-            
             &:hover {
                 .hover-text{
                     visibility: visible;
@@ -41,17 +40,17 @@
             }
             .hover-text {
                 visibility: hidden;
-                color: white;
-                margin-top: 10px;
+                color: rgb(255, 255, 255);
+                font-size:25px;
                 position: absolute; 
-                top: 45%;
+                top: 60%;
                 left: 50%;
                 transform: translate(-50%, -50%); 
-                width: 98%;
-                height: 70%;
+                width: 95%;
+                height: 85%;
             }
             .svg-inline--fa {
-                font-size: 50px;
+                font-size: 55px;
                 margin-top: 15px;
             }
         }
@@ -79,6 +78,18 @@
 
 .skills p{
     text-align: center;
+}
+
+h5{
+    font-size: 20px;
+    font-weight: normal;
+    color:  rgba(121, 156, 165);
+    border: 1px white solid;
+    border-radius: 25px;
+    padding: 20px;
+    font-style: italic;
+    margin-left: 25px;
+    margin-right: 25px;
 }
 
 @media screen and (max-width: 1550px) {
@@ -138,14 +149,14 @@
             }
         }
         h2, p{
-            font-size: 25px;
+            font-size: 20px;
         }
         h3{
             font-size: 20px;
             font-weight: 550;
         }
-        .hover-text{
-            font-weight: 250;
+        h5{
+            font-size: 15px;
         }
     }
     
