--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -13,10 +13,13 @@
     }
     .contactLink {
         @include contact-common-style;
-        width: 20%;
+        text-align: center;
+        width: 30%;
         a {
             img {
-                width: 50%;
+                border: white 1px solid;
+                border-radius: 15px;
+                width: 30%;
             }
         }
     }
@@ -26,24 +29,38 @@
     }
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 1024px) {
     .footer {
-        .contactLink {
-            width: 40%;
-        }
+
         p {
             font-size: 15px;
+        }
+        .contactLink {
+            width: 35%;
+
+            a {
+                img {
+                    width: 35%;
+                }
+            }
         }
     }
 }
 
-@media screen and (max-width: 440px) {
+@media screen and (max-width: 450px) {
     .footer {
+
         p {
-            font-size: 10px;
+            font-size: 11px;
         }
         .contactLink {
-            width: 30%;
+            width: 40%;
+
+            a {
+                img {
+                    width: 40%;
+                }
+            }
         }
     }
 }
