--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -6,25 +6,27 @@
     justify-content: space-between;
 
     .title {
-        font-size: 15px;
-        width: 40%;
+        font-size: 13px;
+        width: 45%;
         margin-left: 20px;
         h1 {
             font-weight: normal;
         }
+
         h2 {
-            letter-spacing: 1.7px;
-            font-size: 30px;
-            margin-top: -25px;
+            letter-spacing: 2px;
+            font-size: 25px;
             font-weight: bold;
+            margin-top: -20px;
             color: rgb(121, 156, 165);
             border-bottom: none;
         }
     }
 
     .navbar {
-        width: 62%;
-        font-size: 30px;
+        width: 70%;
+        font-size: 20px;
+        margin-top: 15px;
         ul {
             list-style: none;
             display: flex;
@@ -43,7 +45,7 @@
     }
 }
 
-@media screen and (max-width: 1185px) {
+@media screen and (max-width: 1100px) {
     .header {
         flex-direction: column;
 
@@ -54,9 +56,6 @@
             h1, h2 {
                 text-align: center;
             }
-            h2 {
-                margin-left: 0px;
-            }
         }
 
         .navbar {
@@ -65,44 +64,25 @@
     }
 }
 
-@media screen and (max-width: 720px) {
-    .header {
-        .navbar {
-            font-size: 25px;
-        }
-    }
-}
-
-@media screen and (max-width: 500px) {
-    .header {
-        .navbar {
-            font-size: 20px;
-        }
-    }
-}
 
 @media screen and (max-width: 440px) {
     .header {
         .title {
             h1 {
-                font-size: 25px;
+                font-size: 20px;
+                letter-spacing: 2px;
+                font-weight: bold;
+                margin-bottom: 25px;
             }
             h2 {
-                font-size: 22px;
-                letter-spacing: 4px;
-                margin-top: 3px;
+                font-size: 20px;
+                letter-spacing: 5px;
+                
             }
         }
         .navbar {
-            font-size: 18px;
-        }
-    }
-}
-
-@media screen and (max-width: 365px) {
-    .header {
-        .navbar {
-            font-size: 16px;
+            font-size: 13px;
+            font-weight: bold;
         }
     }
 }
