--- a/src/styles/Portfolio.scss
+++ b/src/styles/Portfolio.scss
@@ -40,7 +40,7 @@
             
             .portfolioImage {
                 width: 100%;
-                height: 100%;
+                height: auto;
                 margin: 0 auto;
                 margin-bottom: 20px;
                 transition: transform 0.3s;
